test/thy-notification/12thy-notification-ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: thy-notification-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: thy-notification.plab-k8s.skplanet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: thy-notification
          servicePort: 8080
